<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Canarias.com</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="zona_recogida">Zona de Recogida</string>
    <string name="pickup_equals_dropoff">Devolución en el mismo punto de recogida</string>
    <string name="dotdotdot">...</string>
    <string name="fecha_recogida">Fecha de Recogida</string>
    <string name="fecha_devolucion">Fecha de Devolución</string>
    <string name="consultar_disponibilidad">Consultar Disponibilidad</string>
    <string name="title_activity_search_results">Selecciona un Coche</string>
    <string name="pickupLabel">Pick Up</string>
    <string name="dropoffLabel">Drop Off</string>
    <string name="search_summary">Search Summary</string>
    <string name="consultando">Consultando</string>
    <string name="car_image">Car Image</string>
    <string name="reservar">Reservar</string>
    <string name="title_activity_book">BookActivity</string>
    <string name="book_summary">Book Summary</string>
    <string name="driver_name">Name</string>
    <string name="driver_name_hint">Enter Driver Name</string>
    <string name="driver_surname">Surname</string>
    <string name="driver_surname_hint">Enter Driver Surname</string>
    <string name="driver_email">Email</string>
    <string name="driver_email_hint">Enter Driver Email</string>
    <string name="driver_phone">Phone</string>
    <string name="driver_phone_hint">Enter Driver Phone</string>
    <string name="driver_borndate">Born Date</string>
    <string name="driver_borndate_hint">Enter Driver Born Date</string>
    <string name="flight_number">Flight Number</string>
    <string name="flight_number_hint">Enter Flight Number</string>
    <string name="comments">Comments</string>
    <string name="comments_hint">Enter comments</string>
    <string name="make_booking">Complete Booking</string>
    <string name="making_booking">Realizando Reserva...</string>
    <string name="making_booking_title">Realizando Reserva</string>
    <string name="no_offices_downloaded">No se ha podido descargar ninguna oficina</string>
    <string name="offices_download_error">Ha ocurrido un error al descargar las oficinas</string>
    <string name="downloadOfficesTitle">Descargar datos de oficinas</string>
    <string name="downloadOfficesDesc">Sincronizar los datos de las oficinas</string>
    <string name="downloadOfficesText">Se descargarán y actualizarán los datos de las oficinas</string>
    <string name="offices_download_ok">Se han actualizado las zonas correctamente</string>
    <string name="downloadOfficesPositiveBtn">Iniciar descarga</string>
    <string name="downloadOfficesNegativeBtn">Cancelar</string>
    <string name="downloading_offices">Descargando oficinas...</string>
    <string name="no_cars_downloaded">No se ha podido descargar ningún coche</string>
    <string name="cars_download_error">Ha ocurrido un error al descargar los coches</string>
    <string name="downloadCarsTitle">Descargar datos de coches</string>
    <string name="downloadCarsDesc">Sincronizar los datos de los coches</string>
    <string name="downloadCarsText">Se descargarán y actualizarán los datos de los coches</string>
    <string name="cars_download_ok">Se han actualizado los coches correctamente</string>
    <string name="downloadCarsPositiveBtn">Iniciar descarga</string>
    <string name="downloadCarsNegativeBtn">Cancelar</string>
    <string name="downloading_cars">Descargando coches...</string>
    <string name="close_label">Cerrar</string>
    <string name="pref_header_customer_data">Información del Cliente</string>
    <string name="pref_title_display_customer_name">Nombre</string>
    <string name="pref_title_display_customer_surname">Apellidos</string>
    <string name="pref_title_display_customer_email">E-mail</string>
    <string name="pref_title_display_customer_phone">Teléfono</string>
    <string name="pref_title_display_customer_birth_date">Fecha de nacimiento</string>
    <string name="title_car_list">Coches</string>
    <string name="title_car_detail">Detalle de coche</string>
    <string name="title_activity_home">Inicio</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Abrir navegación</string>
    <string name="navigation_drawer_close">Cerrar navegación</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Ajustes</string>
    <string name="navigation_drawer_my_bookings">Ver Mis Reservas</string>
    <string name="navigation_drawer_models">Buscar Coches</string>
    <string name="navigation_drawer_offices">Buscar Oficinas</string>
    <string name="navigation_drawer_search_booking">Buscar Reservas</string>
    <string name="navigation_drawer_new_booking">Reservar Coches</string>
    <string name="navigation_drawer_settings">Ajustes</string>
    <string name="title_fragment_new_booking">Reservar Coches</string>
    <string name="title_fragment_cars">Coches</string>
    <string name="title_office_list">Oficinas</string>
    <string name="title_office_detail">Detalle de oficina</string>
    <string name="placeholder_car_title">Título del coche</string>
    <string name="car_detail_link">Ver Detalles</string>
    <string name="category_label">Categoría:</string>
    <string name="group_label">Grupo:</string>
    <string name="car_detail_attributes_title">Características</string>
    <string name="sipp_label">Código SIPP</string>
    <string name="picker_cancel">Cancel</string>
    <string name="picker_set">OK</string>
    <string name="hours_label">h</string>
    <string name="minutes_label">m</string>
    <string name="seconds_label">s</string>
    <string name="hours_label_description">hours</string>
    <string name="minutes_label_description">minutes</string>
    <string name="seconds_label_description">seconds</string>
    <string name="timer_delete">Delete</string>
    <string name="time_picker_ampm_label">--</string>
    <string name="time_picker_time_seperator">:</string>
    <string name="time_picker_00_label">:00</string>
    <string name="time_picker_30_label">:30</string>
    <string name="number_picker_minus_label">—</string>
    <string name="number_picker_seperator">.</string>
    <string name="number_delete">Delete</string>
    <string name="number_picker_plus_minus">+/-</string>
    <string name="hms_picker_hours_label">H</string>
    <string name="hms_picker_minutes_label">M</string>
    <string name="hms_picker_seconds_label">S</string>
    <string name="expiration_picker_seperator">/</string>
    <string name="month_c">MONTH</string>
    <string name="day_c">DAY</string>
    <string name="year_c">YEAR</string>
    <string name="min_error">Please input a number greater than or equal to %1$d</string>
    <string name="max_error">Please input a number less than or equal to %1$d</string>
    <string name="min_max_error">Please input a number between %1$d and %2$d</string>
    <string name="done_label">Aceptar</string>
    <string name="hour_picker_description">Hours circular slider</string>
    <string name="minute_picker_description">Minutes circular slider</string>
    <string name="select_hours">Select hours</string>
    <string name="select_minutes">Select minutes</string>
    <string name="day_picker_description">Month grid of days</string>
    <string name="year_picker_description">Year list</string>
    <string name="select_day">Select month and day</string>
    <string name="select_year">Select year</string>
    <string name="item_is_selected">%1$s selected</string>
    <string name="deleted_key">%1$s deleted</string>
    <string name="time_placeholder">--</string>
    <string name="time_separator">:</string>
    <string name="radial_numbers_typeface">sans-serif</string>
    <string name="sans_serif">sans-serif</string>
    <string name="day_of_week_label_typeface">sans-serif</string>
    <string name="recurrence_month_pattern_by_day">on the same day each month</string>
    <string name="acessibility_recurrence_choose_end_date_description">change end date</string>
    <string name="save_label">Done</string>
    <string name="recurrence_end_continously">Forever</string>
    <string name="recurrence_end_date_label">Until a date</string>
    <string name="recurrence_end_date">Until <xliff:g id="date">%s</xliff:g></string>
    <string name="recurrence_end_count_label">For a number of events</string>
    <plurals name="recurrence_interval_daily">

        
        <item quantity="one">Every <xliff:g id="count">%d</xliff:g> day</item>
        
        <item quantity="other">Every <xliff:g id="count">%d</xliff:g> days</item>
    </plurals>
    <plurals name="recurrence_interval_weekly">

        
        <item quantity="one">Every <xliff:g id="count">%d</xliff:g> week</item>
        
        <item quantity="other">Every <xliff:g id="count">%d</xliff:g> weeks</item>
    </plurals>
    <plurals name="recurrence_interval_monthly">

        
        <item quantity="one">Every <xliff:g id="count">%d</xliff:g> month</item>
        
        <item quantity="other">Every <xliff:g id="count">%d</xliff:g> months</item>
    </plurals>
    <plurals name="recurrence_interval_yearly">

        
        <item quantity="one">Every <xliff:g id="count">%d</xliff:g> year</item>
        
        <item quantity="other">Every <xliff:g id="count">%d</xliff:g> years</item>
    </plurals>
    <plurals name="recurrence_end_count">
        <item quantity="one">For <xliff:g id="event_count">%d</xliff:g> event</item>
        <item quantity="other">For <xliff:g id="event_count">%d</xliff:g> events</item>
    </plurals>
    <string name="endByDate">; until <xliff:g id="date">%s</xliff:g></string>
    <plurals name="endByCount">
        <item quantity="one">; for one time</item>
        <item quantity="other">; for <xliff:g id="number">%d</xliff:g> times</item>
    </plurals>
    <plurals name="daily">
        <item quantity="one">Daily</item>
        <item quantity="other">Every <xliff:g id="number">%d</xliff:g> days</item>
    </plurals>
    <string name="every_weekday">"Every weekday (Mon\u2013Fri)"</string>
    <plurals name="weekly">
        <item quantity="one">Weekly on <xliff:g id="days_of_week">%2$s</xliff:g></item>
        <item quantity="other">Every <xliff:g id="number">%1$d</xliff:g> weeks on <xliff:g id="days_of_week">%2$s</xliff:g></item>
    </plurals>
    <string name="monthly">Monthly</string>
    <string name="yearly_plain">Yearly</string>
    <string name="switch_on">ON</string>
    <string name="switch_off">OFF</string>
    <string name="hint_time_zone_search">Type country name</string>
    <string name="searchview_description_clear">Clear query</string>
    <string name="no_results_found">No results found</string>
    <string name="palestine_display_name">Palestine</string>
    <string name="step_1">1.</string>
    <string name="pickupPointDefaultLabel">Selecciona un punto de recogida</string>
    <string name="step_2">2.</string>
    <string name="accept">Aceptar</string>
    <string name="office_name">Nombre Oficina</string>
    <string name="office_address">Dirección de la oficina</string>
    <string name="office_phone">(0034) 666555444</string>
    <string name="office_zone">Zona de la oficina</string>
    <string name="txt_image_slider">Slider de imágenes</string>
    <string name="dummyHelpTitle">Título del paso</string>
    <string name="dummyHelpText">Descripción de la accion que puede tener varias líneas de texto ya que se debe explicar lo que se puede realizar en la pantalla actual.</string>
    <string name="dummyHelpTitleAction">Título de la acción</string>
    <string name="selectZoneDefaultLabel">Selecciona una Zona</string>
    <string name="selectPointDefaultLabel">Selecciona una Oficina</string>
</resources>