<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<ListPreference
        android:key="sync_frequency"
        android:title="@string/pref_title_sync_frequency"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:defaultValue="180"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />-->

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <!--<Preference android:title="@string/pref_title_system_sync_settings">
        <intent android:action="android.settings.SYNC_SETTINGS" />
    </Preference>-->

    <com.canarias.rentacar.dialogs.AsyncDialogPreference
        android:dialogIcon="@android:drawable/ic_dialog_alert"
        android:dialogMessage="@string/downloadOfficesText"
        android:key="download_offices"
        android:negativeButtonText="@string/downloadOfficesNegativeBtn"
        android:positiveButtonText="@string/downloadOfficesPositiveBtn"
        android:summary="@string/downloadOfficesDesc"
        android:title="@string/downloadOfficesTitle" />

    <com.canarias.rentacar.dialogs.AsyncDialogPreference
        android:dialogIcon="@android:drawable/ic_dialog_alert"
        android:dialogMessage="@string/downloadCarsText"
        android:key="download_cars"
        android:negativeButtonText="@string/downloadCarsNegativeBtn"
        android:positiveButtonText="@string/downloadCarsPositiveBtn"
        android:summary="@string/downloadCarsDesc"
        android:title="@string/downloadCarsTitle" />

</PreferenceScreen>
