<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".BookActivity">

    <RelativeLayout
        android:id="@+id/bookWrapperLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/bookSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <TableRow
                android:id="@+id/bookTableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtSearchSummaryBook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/book_summary"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow
                android:id="@+id/bookTableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lblPickupPointBook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

                <TextView
                    android:id="@+id/lblPickupDateTimeBook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />
            </TableRow>

            <TableRow
                android:id="@+id/bookTableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lblDropoffPointBook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

                <TextView
                    android:id="@+id/lblDropoffDateTimeBook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/carWrapperBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:layout_below="@id/bookSummary">

            <ImageView
                android:id="@+id/imageCarBook"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/car_image"
                android:scaleType="centerInside"
                android:src="@drawable/ic_launcher" />

            <RelativeLayout
                android:id="@+id/carWrapperBookBoxTopRight"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtCarModelBook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="3dp" />

                <TextView
                    android:id="@+id/txtPriceBook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtCarModelBook" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/bookFormWrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/carWrapperBook">

            <TextView
                android:id="@+id/lblDriverName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/driver_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtDriverName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/lblDriverName"
                android:ems="10"
                android:hint="@string/driver_name_hint"
                android:inputType="text">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/lblDriverSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/txtDriverName"
                android:text="@string/driver_surname"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtDriverSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/lblDriverSurname"
                android:ems="10"
                android:hint="@string/driver_surname_hint"
                android:inputType="text" />

            <TextView
                android:id="@+id/lblDriverEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="false"
                android:layout_below="@id/txtDriverSurname"
                android:text="@string/driver_email"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtDriverEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/lblDriverEmail"
                android:ems="10"
                android:hint="@string/driver_email_hint"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/lblDriverPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="false"
                android:layout_below="@id/txtDriverEmail"
                android:text="@string/driver_phone"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtDriverPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/lblDriverPhone"
                android:ems="10"
                android:hint="@string/driver_phone_hint"
                android:inputType="phone" />

            <TextView
                android:id="@+id/lblDriverBornDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="false"
                android:layout_below="@id/txtDriverPhone"
                android:text="@string/driver_borndate"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtDriverBornDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/lblDriverBornDate"
                android:ems="10"
                android:hint="@string/driver_borndate_hint"
                android:inputType="date" />

            <TextView
                android:id="@+id/lblFlightNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="false"
                android:layout_below="@id/txtDriverBornDate"
                android:text="@string/flight_number"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtFlightNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/lblFlightNumber"
                android:ems="10"
                android:hint="@string/flight_number_hint"
                android:inputType="text" />

            <TextView
                android:id="@+id/lblComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="false"
                android:layout_below="@id/txtFlightNumber"
                android:text="@string/comments"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/lblComments"
                android:ems="10"
                android:hint="@string/comments_hint"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/btnMakeBooking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_below="@id/txtComments"
                android:layout_marginTop="10dp"
                android:text="@string/make_booking" />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>